--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h1> Why I want to become a developer </h1>
+	<h1> Why I want to become a developer? </h1>
 	<p> As a developer we can provide solutions for users' problems. Also it's a chance to help other people through the power of technology </p>
 	
 
